# llvm-explore

./: .gitignore  CMakeLists.txt  README.md
TableGen/: K8.td  K8RegisterInfo.td  README.md
input/c/: branchless_max.c  branchless_min.c  max.c  min.c
input/ir/base/: max.ll  min.ll
input/ir/memory-transfer/: branchless-max-mt.ll
input/ir/primitive-branch/: branchless-max.ll  branchless-min.ll  max.ll  min.ll
input/ir/redundant-load/: min-rl.ll
input/ir/unused-store/: branchless-max.ll  branchless-min-us.ll  branchless-min.ll  max-us.ll  max.ll  min-us.ll  min.ll
inputs/: clamp.ll  rl-mt-passes.ll  rl-mt-us-passes.ll
ir/: clamp.ll  rl-mt-passes.ll  rl-mt-us-passes.ll  rl-passes.ll
notes/: GlobalISel-notes.txt  README.md  TableGen-notes.txt  advanced-git.txt  apple-gpu-compiler.txt  gpu-architecture.txt  instruction-scheduling.txt  jit.txt  llvm-fundamentals.txt  llvm-ir.txt  llvm-testing.txt  mc-layer.txt  metal.txt  register-allocation.txt  software-optimizations.txt
notes/tblgen-examples/: K8InstrInfo.td
pass/: CMakeLists.txt  MemoryTransferPass.cpp  PrimitiveBranchPass.cpp  RedundantLoadPass.cpp  UnusedStorePass.cpp
test/: CMakeLists.txt  branchless-max-mt.ll  branchless-max-pb.ll  branchless-max-rl.ll  branchless-max-us-.ll  branchless-max-us.ll  branchless-max.ll  branchless-min-mt.ll  branchless-min-pb.ll  branchless-min-rl.ll  branchless-min-us.ll  branchless-min.ll  clamp.c  lit.cfg.py  lit.site.cfg.py.in  max-mt.ll  max-pb.ll  max-rl.ll  max-us.ll  min-mt.ll  min-pb.ll  min-rl.ll  min-us.ll
